src/objects/Customer_Transaction__c.object
<CustomObject>
    <description>This object will be used to control all customer transactions (Invoices) and the status of each one of the invoices</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Transactions</relationshipLabel>
        <relationshipName>Customer_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charge_Detail__c</fullName>
        <label>Charge Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Date_Txt__c</fullName>
        <label>Invoice Date Txt</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Amount__c</fullName>
        <label>Open Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Customer Transaction</label>
    <nameField>
        <label>Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>